--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     height: 40px;
-    background-color: #dcdcdc
+    background-color: #ececec
 }
 
 #tab-container {
@@ -15,13 +15,17 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    opacity: 0.8;
 }
 
 #tab-list .item {
     padding: 0 10px;
-    border-right: 1px solid black;
+    cursor: pointer;
 }
-
+#tab-list .item:hover,#tab-list .item.active {
+    background-color: #FFFFFF;
+    opacity: 1;
+}
 #tab-list .item span {
     height: 40px;
     line-height: 40px;
